Fixed text size on mobile landscape

--- a/styles/modules/second_page.module.css
+++ b/styles/modules/second_page.module.css
@@ -89,6 +89,18 @@
   margin-bottom: 12px;
 }
 
+@media only screen and (max-height: 575.98px) and (orientation: landscape) {
+  .text > h2 {
+    font-weight: 600;
+    font-size: 16px;
+  }
+
+  .text > p {
+    font-weight: 300;
+    font-size: 12px;
+  }
+}
+
 .svg_container {
   width: 100%;
   height: 100%;
@@ -151,6 +163,23 @@
 .tech_icons > svg {
   width: clamp(12px, 1.5vw, 16px);
   height: clamp(12px, 1.5vw, 16px);
+}
+
+@media only screen and (max-height: 575.98px) and (orientation: landscape) {
+  .tech > p {
+    font-weight: 300;
+    font-size: 12px;
+  }
+
+  .tech_icons {
+    padding: 8px;
+    gap: 8px;
+  }
+
+  .tech_icons > svg {
+    width: 12px;
+    height: 12px;
+  }
 }
 
 @media screen and (min-width: 1440px) and (min-height: 900px) {
